2006-01-15 nowel <nowel@xole.net>

    * N:1 マッピングに対応しました。
        ***_RELNO アノテーション, ***_RELKEYS アノテーションに対応しました。

    * ***_ARGS アノテーションが指定されない場合に、メソッドの引数名を使用するように変更しました。
        - JAVA では メソッドの引数名に対してリフレクションできませんでしたが、PHP5.1.x では
        　可能であるため、対応させました。
            現段階では、メソッドの初期値に null が設定されている場合には設定しません。

        ex)
            method_SQL = "select * from hoge where foo = /*id*/ and bar = /*bar*/
            public function method($id, $bar);

2006-01-13 nowel <nowel@xole.net>

    * S2Dao_PropertyTypeImpl を修正しました。
    * S2Dao_AbstractAutoHandler を修正しました。(Oracle対応)
    * Array_***, find*** メソッド利用時の結果セットを正しく返すように修正しました。
    * Oracle 使用時のバグを修正しました。
        - Oracle での Null の扱いについては pdo.dicon の optionで設定してください

2006-01-12 nowel <nowel@xole.net>

    * Oracle 利用可能になりました。(alpha)

2006-01-11 nowel <nowel@xole.net>

    * dbms.properties を変更しました。

2006-01-07 nowel <nowel@xole.net>

    * AnnotationReaderFactory を追加しました。
        Java 版 S2Dao 1.0.29 と同じ物です。 
        added
        - impl/S2Dao_FieldAnnotationReaderFactory
        - impl/S2Dao_FieldDaoAnnotationReader
        - impl/S2Dao_FieldBeanAnnotationReader
        - S2Dao_BeanAnnotationReader
        - S2Dao_AnnotationReaderFactory

2005-12-24 nowel <nowel@xole.net>

    * example/shelf_*.php を修正しました。
        プロパティ addtime が add*METHOD* に衝突するので
        prop_COLUMN プロパティを行うように修正しています。

2005-12-20 nowel <nowel@xole.net>

    * IDアノテーション COLUMN アノテーションに対応しました。

    * メソッド定義の修正
        Dao によって定義するメソッド定義を修正しました。

2005-12-14 nowel <nowel@xole.net>

    * PHP Archive Task を修正しました。
        - FilterChainを用いて比較的小さなpharファイルを作成することができます。
        - Windowsでの動作をサポートしました。(仮)

2005-12-10 nowel <nowel@xole.net>

    * PHP Archive Task を修正しました。
        付属のbuild.xmlを参考にしてください。

2005-12-09 nowel <nowel@xole.net>

    * Phing PHP Archive Task
        PHP Archive(phar) 化を行う Phing Task を作成しました。

    * S2Dao.PHP5-1.0.0-beta3 開発開始

2005-12-07 nowel <nowel@xole.net>

================ S2Dao.PHP5-1.0.0-beta2 更新履歴 ===================
