@@ -1,46 +1,0 @@
-<?xml version="1.0"?>
-<project name="s2dao.php5" default="package" basedir=".">
-
-    <taskdef name="phar" classname="src.phing.task.PHPArchiveTask" />
-
-    <target name="properties">
-        <property name="project.name" value="${phing.project.name}" />
-        <property name="project.postfix" value="1.0.0-beta3" />
-        <property name="project.src.dir" value="${project.basedir}/src/${project.name}" />
-        <property name="project.build.dir" value="${project.basedir}/build" />
-        <property name="phar.inifile" value="S2DaoClassLoader.class.php" />
-        <property name="phar.usegzip" value="true" />
-        <property name="phar.file.name" value="${project.name}-${project.postfix}.phar" />
-        <property name="phar.file.path" value="${project.build.dir}/${phar.file.name}" />
-    </target>
-
-    <target name="prepare" depends="properties">
-        <mkdir dir="${project.basedir}/build" />
-    </target>
-
-    <target name="package" depends="prepare" description="make phar file">
-        <echo msg="Making PHP Archive Files..." />
-        <phar pharfile="${phar.file.path}" inifile="${phar.inifile}" usegzip="${phar.usegzip}">
-            <fileset dir="${project.src.dir}">
-                <include name="**" />
-                <exclude name="**/*.core.classes.php" />
-                <exclude name="**examples/**" />
-                <exclude name="**phing/**" />
-            </fileset>
-            <filterchain>
-                <tabtospaces tablength="4" />
-                <stripphpcomments />
-                <striplinecomments>
-                    <comment value="#" />
-                    <comment value="//" />
-                </striplinecomments>
-            </filterchain>
-        </phar>
-    </target>
-
-    <target name="clean" depends="prepare" description="clean up">
-        <echo msg="Cleaning up..." />
-        <delete dir="${project.build.dir}" />
-    </target>
-
-</project>
