@@ -82,9 +82,10 @@ class S2DaoClassLoader {
         'S2Dao_InsertBatchAutoHandler' => '/org/seasar/dao/impl/S2Dao_InsertBatchAutoHandler.class.php',
         'S2Dao_InsertBatchAutoStaticCommand' => '/org/seasar/dao/impl/S2Dao_InsertBatchAutoStaticCommand.class.php',
         'S2Dao_UpdateAutoHandler' => '/org/seasar/dao/impl/S2Dao_UpdateAutoHandler.class.php',
+        'S2Dao_UpdateAutoStaticCommand' => '/org/seasar/dao/impl/S2Dao_UpdateAutoStaticCommand.class.php',
         'S2Dao_UpdateBatchAutoHandler' => '/org/seasar/dao/impl/S2Dao_UpdateBatchAutoHandler.class.php',
         'S2Dao_UpdateBatchAutoStaticCommand' => '/org/seasar/dao/impl/S2Dao_UpdateBatchAutoStaticCommand.class.php',
-        'S2Dao_UpdateAutoStaticCommand' => '/org/seasar/dao/impl/S2Dao_UpdateAutoStaticCommand.class.php',
+        'S2Dao_UpdateDynamicCommand' => '/org/seasar/dao/impl/S2Dao_UpdateDynamicCommand.class.php',
         'S2Dao_RelationRowCache' => '/org/seasar/dao/impl/S2Dao_RelationRowCache.class.php',
         'S2Dao_SelectDynamicCommand' => '/org/seasar/dao/impl/S2Dao_SelectDynamicCommand.class.php',
         'S2DaoInterceptor' => '/org/seasar/dao/interceptors/S2DaoInterceptor.class.php',
