@@ -15,11 +15,11 @@ class S2Dao_RelationRowCache {
     }
     
     public function getRelationRow($relno, S2Dao_RelationKey $key) {
-        return $this->getRowMap($relno)->get($key);
+        return $this->getRowMap($relno)->get($key->hashCode());
     }
     
     public function addRelationRow($relno, S2Dao_RelationKey $key, $row) {
-        $this->getRowMap($relno)->put($key, $row);
+        $this->getRowMap($relno)->put($key->hashCode(), $row);
     }
 
     protected function getRowMap($relno) {
