@@ -1,3 +1,10 @@
+2006-01-22 nowel <nowel@xole.net>
+
+    * src/phing/task/* 及び build.xml は S2Container.PHP5 のプロジェクトに移行しました。
+        phar パッケージ及び pear パッケージ作成の際は S2Container.PHP5 から行ってください。
+
+    * src\example/s2dao_orign に S2Dao(java) の Exapme を作成しました。
+
 2006-01-15 nowel <nowel@xole.net>
 
     * N:1 マッピングに対応しました。
